Overflow fixed

--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,11 @@ body {
   overflow-x: hidden;
   overflow-y: auto; /* Enable vertical scrolling */
 }
+/* Prevent horizontal scrolling on mobile */
+body,
+html {
+  overflow-x: hidden;
+}
 
 #root {
   display: flex;
